--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-.DS_Store
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Editor directories and files
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-package-lock.json
+dist
