feat(package.json): prepublishOnly step added

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --env.NODE_ENV=development --mode development --open --hot --https",
-    "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules"
+    "build": "webpack --env.NODE_ENV=production --mode production --progress --hide-modules",
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "lamejs": "^1.2.0"
